--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,11 @@
     position: relative;
 }
 
-img{
+.header img{
     max-width: 100%;
     width:1400px;
     height: 600px;
+    opacity: 0.6;
 }
 
 .navbar{
@@ -28,13 +29,20 @@ img{
     align-items: center;
     margin-left: 300px;
     padding-top: 10px;
-
+    
 }
 
 .link a{
     text-decoration: none;
     font-size: 15px;
     color: #ffffff;
+    cursor: hover;
+}
+
+.link a:hover{
+    background-color: green;
+    padding: 5px;
+    border-radius: 3px;
 }
 
 #icon{
@@ -52,7 +60,7 @@ button{
     padding: 10px;
     margin-left: 70px;
     border: none;
-    cursor: pointer;
+    cursor: hover;
 }
 
 button:hover{
@@ -126,6 +134,7 @@ h1{
 
 .testimonial img{
     max-width: 100%;
+    width: 1000px;
     height: 450px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -161,6 +170,11 @@ h1{
     background-color:rgba(112, 128, 144, 0.342);
 }
 
+.property h2{
+    padding-top: 20px;
+
+}
+
 .property p{
     align-items: center;
     text-align: center;
@@ -169,9 +183,169 @@ h1{
 #property-b{
     width: 120px;
     padding: 15px;
+    margin-bottom: 55px;
 }
+
 .t{
     font-weight: lighter;
 }
 
-jgdghg
+.service{
+    padding-top: 30px;
+    font-family: sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    background-color: #0a2342b6;
+    color: #ffffff;
+}
+ 
+.hero{
+    display: grid;
+    grid-template-columns: 200px 200px 200px 200px;
+    gap: 20px;
+}
+ 
+.hero img{
+    height: 200px;
+    width:200px;
+    border-radius: 5px;
+}
+
+.hero figcaption{
+    text-align: left;
+    padding-left:10px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding-bottom: 10px;
+    
+}
+
+.service p {
+    align-items: center;
+    text-align: center;
+}
+
+#Services{
+    width: 200px;
+    margin-bottom: 30px;
+    padding: 20px;
+}
+.feedback{
+    background-color: #5c88bd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 90px;
+}
+.feedback-img-box{ 
+    display: grid;
+    grid-template-columns: 500px 500px;
+    gap:30px
+
+}
+.img-one,.img-two{
+    margin-top: 30px;
+    background-color: white;
+    display: grid;
+    grid-template-columns:200px 200px ;
+    border-radius: 5px;
+    gap: 20px;
+    
+}
+.feedback img{
+    max-width: 100%;
+    height: 90px;
+    padding: 20px;
+    border-radius: 10px;
+} 
+.feedback p{
+    padding-top: 10px;
+
+}
+
+/* .feedback h2{
+    color: black;
+    font-family: sans-serif;
+    text-align: center;
+    padding-top: 35px;
+    padding-bottom: 40px;
+
+} */
+
+.footer{
+    background-color: #0a2342;
+    padding-top: 90px;
+    display: grid;
+    grid-template-columns: 250px 250px 250px 250px;
+    gap: 5px;
+    padding-left: 160px;
+    padding-bottom: 40px;
+    font-family: sans-serif;
+}
+
+.companyabout{
+    color: white;
+    padding-top: 20px;
+    padding-left: 1px;
+}
+
+#footer-icon{
+    width: 20px;
+    height: 20px;
+    
+} 
+
+#icon-img{
+    padding-bottom: 20px;
+}
+
+#heading{
+    padding-bottom: 20px;
+    color: white;
+}
+
+.dwelling{
+    color: white;
+    padding-left: 25px;
+}
+
+.support{
+    color: white;
+    padding-left: 2px;
+}
+
+.company{
+    color: white;
+    padding-left: 5px;
+}
+
+.logos{
+    /* display: grid;
+    grid-template-columns: 20px 20px 20px;
+    gap: 5px;
+    padding-left: 2px;*/
+    background-color: #0a2342; 
+    display: flex;
+    
+}
+
+.logos img{
+    width: 20px;
+    height: 20px;
+    /* align-items: flex-start; */
+   padding-top: 50px;
+   padding-left: 60px;
+   padding-bottom: 50px;
+    
+}
+
+.logos p{
+    font-family: sans-serif;
+    color: white;
+    margin: auto;
+}
