--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@
 
 .header img{
     max-width: 100%;
-    width:1400px;
-    height: 600px;
+    width:2200px;
+    height: 550px;
     opacity: 0.6;
 }
 
@@ -83,6 +83,7 @@ h1{
     width: 100px;
     padding: 15px;
     margin-top: 25px;
+   margin-left: 4px;
 }
 
 .texts{
@@ -101,7 +102,7 @@ h1{
     background-color: #0a2342;
     padding-top: 45px;
     z-index: 0;
-    height: 300px;
+    height: 400px;
 }
 
 .aboutus p{
